Roman-Numerals/roman-numeral_template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application. 
  This template creates Python Flask Web Application on 
  Amazon Linux 2 (ami-0b5eea76982371e91) EC2 Instance with 
  custom security group allowing http connections on port 80 and SSH connection on port 22. 
  Roman Numerals Converter Application is downloaded from Github repository, 
  then installed on Flask.

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP and SSH for secure connection.  # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0b5eea76982371e91        # ???
      InstanceType: t2.micro
      KeyName: first-key                    # ???
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup       # ???
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install python3 -y
            pip3 install flask
            yum install git -y
            cd /home/ec2-user
            wget -P templates https://raw.githubusercontent.com/alparslanu6347/my-projects/main/Roman-Numerals-Converter/templates/index.html
            wget -P templates https://raw.githubusercontent.com/alparslanu6347/my-projects/main/Roman-Numerals-Converter/templates/result.html
            wget https://raw.githubusercontent.com/alparslanu6347/my-projects/main/Roman-Numerals-Converter/app.py
            python3 app.py

Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
